<resources>
    <string name="host">http://tacticalwarreport.com/web</string>
    <string name="createReport">/createReport</string>
    <string name="about">About</string>
    <string name="app_name">Tactical War Report</string>
    <string name="new_battle">New battle</string>
    <string name="delete_battle">Delete</string>
    <string name="edition">Edition</string>
    <string name="export_battle_pdf">Export (PDF)</string>
    <string name="battle">Battle</string>
    <string name="game">Game</string>
    <string name="player">Player</string>
    <string name="player_one">Player 1</string>
    <string name="player_two">Player 2</string>
    <string name="ok_create">Create</string>
    <string name="save">Save</string>
    <string name="photo">Photo</string>
    <string name="configure_player">Player\'s configuration</string>
    <string name="player_name_hint">Player/team\'s name</string>
    <string name="player_race_hint">Race played by player/team</string>
    <string name="next">Next</string>
    <string name="done">Done !</string>
    <string name="game_name_hint">Battle\'s name</string>
    <string name="game_format_hint">Game\'s format (points)</string>
    <string name="creation_error">There was an error during game\'s creation process</string>
    <string name="game_date_hint">Game\'s date</string>
    <string name="t1">T1</string>
    <string name="t2">T2</string>
    <string name="t3">T3</string>
    <string name="t4">T4</string>
    <string name="t5">T5</string>
    <string name="t6">T6</string>
    <string name="t7">T7</string>
    <string name="photo_table">Table photo</string>
    <string name="deployment_type">Deployment type</string>
    <string name="deployment_type_hint">Hammer and alvin, other &#8230;</string>
    <string name="scenario">Mission</string>
    <string name="scenario_hint">The Relic, other &#8230;</string>
    <string name="who_start">Who\'s starting ?</string>
    <string name="lord_capacity">Lord capacity : </string>
    <string name="lord_capacity_hint">Strategy, Personality, other &#8230;</string>
    <string name="photo_deployment_player">After deployment phase :</string>
    <string name="photo_deployment">Deployment</string>
    <string name="random_name">A random name</string>
    <string name="comments">Comments</string>
    <string name="comments_hints">Your impressions, remarks, other &#8230;</string>
    <string name="battle_saved">Battle has been saved !</string>
    <string name="really_delete">Do you really want to delete this battle ? This can\'t be undone.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="battle_hasbeen_deleted">Battle has been deleted.</string>
    <string name="photo_move">After move photo :</string>
    <string name="photo_shoot">After shoot photo :</string>
    <string name="photo_assault">After assault photo :</string>
    <string name="is_last_turn">Last turn</string>
    <string name="pdf_hasbeen_generated">PDF document has been generated.</string>
    <string name="is_night">Night fight</string>
    <string name="welcome">Welcome ! To create a new battle, please use the top-right button.</string>
    <string name="pdf_action_title">Action on PDF</string>
    <string name="pdf_action">PDF file has been generated and saved on your filesystem. What do you want to do with this file ?</string>
    <string name="pdf_consult">Consult the document</string>
    <string name="pdf_share">Share the document</string>
    <string name="no_application_pdf">No application has been found to consult this document</string>
    <string name="no_application_share">No application has been found to share this document</string>
    <string name="share_subject">Battle report</string>
    <string name="share_text">Here is a sweety battle report, generated by Tactical War Report, an Android App.</string>
    <string name="really_quit">Do you want to save this battle before quitting Edition mode ?</string>
    <string name="dont_want_to_quit">I don\'t want to quit !</string>
    <string name="photo_infiltration">After infiltration photo : </string>
    <string name="photo_scoot">After scooting photo :</string>
    <string name="loading">Loading. Please wait &#8230;</string>
    <string name="zoom_extra">Zoom on extra photo</string>
    <string name="pdf_generating">PDF is currently generating &#8230;</string>
    <string name="pdf_game_scenario">Game\'s scenario</string>
    <string name="pdf_game_format">Game\'s format</string>
    <string name="pdf_warlord">Warlord of</string>
    <string name="pdf_sorcerers">Sorcerers of</string>
    <string name="pdf_table">Game\'s table</string>
    <string name="pdf_turn">Turn #</string>
    <string name="pdf_more_photos">More extras photos</string>
    <string name="pdf_no_photo">No photo</string>
    <string name="pdf_move">Move for</string>
    <string name="pdf_move_short">Moves</string>
    <string name="pdf_charge">Charge for</string>
    <string name="pdf_power">Power for</string>
    <string name="pdf_shoot">Shoot for</string>
    <string name="pdf_shoot_short">Shoots</string>
    <string name="pdf_assault">Assault for</string>
    <string name="pdf_deployment">Deployment</string>
    <string name="pdf_begin">begins !</string>
    <string name="pdf_deployment_of">Deployment of</string>
    <string name="pdf_nightFightOn">Night has fallen on the planet !</string>
    <string name="pdf_lastTurn">Last turn</string>
    <string name="pdf_nightFight">With night rules</string>
    <string name="little_welcome">Welcome !</string>
    <string name="first_launch">Tactical War Report ! &lt;br/&gt;&lt;br/&gt;
        This app will allow you to easily write your own battle reports for Warhammer&#169; 40000, Warhammer Battle and X-Wing.  
        &lt;br/&gt;&lt;br/&gt;
        Keep in mind that writing a report is a really hard task : start to fight with some little games. TWR is here to help but it can\'t do anything &#8230;
        It\'s yours to take right timed cool photos and to write your notes.&lt;br/&gt;&lt;br/&gt;
        Tactical War Report is still in "beta" version. Some bugs may reside into the app. TWR also has an heavy roadmap. &lt;br/&gt;&lt;br/&gt;
        Have fun ! ;)</string>
    <string name="export_battle_web">Export (tacticalwarreport.com)</string>
    <string name="web_exporting">Exporting to Web application &#8230;</string>
    <string name="login_hint">Your login</string>
    <string name="password_hint">Your password</string>
    <string name="connect">Connection</string>
    <string name="connection_help">You have to authenticate yourself before in order to continue. 
        If you havn\'t got an account yet, you can register on www.tacticalreport.com.</string>
    <string name="bad_auth_title">Authentication error</string>
    <string name="bad_auth">Your login/pass seems to be not correct. Would you like to try a new connection ?</string>
    <string name="webexport_ok">Export has been done !</string>
    <string name="webexport_fail">There was an error during the export process. Please, try later &#8230;</string>
    <string name="preferences">Preferences</string>
    <string name="preferences_general">General preferences</string>
    <string name="preferences_letScreenAlwaysOn_summary">Do you wish to always let your display switched on ?</string>
    <string name="preferences_letScreenAlwaysOn">Screen</string>
    <string name="preferences_whenQuitComportment">Action when I quit report\'s edition</string>
    <string name="preferences_whenQuitComportment_summary">What do you want the app to do when you quit the report\'s edition ?</string>
    <string name="preferences_whenQuitComportment_dialogTitle">Action selection</string>
    <string name="preferences_timer">Timer\'s preferences</string>
    <string name="preferences_timerDuration">Timer\'s duration</string>
    <string name="preferences_timerDuration_summary">Configure the timer\'s duration here : it will be activated each time.</string>
    <string name="preferences_wrongDurationTimer_value">A bad value has been configurated for timer\'s duration. A default value is going to be used.</string>
    <string name="preferences_timerRingtone">Used ringtone</string>
    <string name="preferences_timerRingtone_summary">Choose the right ringtone for your timer\'s activation.</string>
    <string name="preferences_timerVibrator">Vibrator</string>
    <string name="preferences_timerVibrator_summary">Do you wish your device to vibrate each time the timer activate ?</string>
    <string name="preferences_ok">Preferences has been saved.</string>
    <string name="preferences_auth">Authentification on Webapp</string>
    <string name="timer_notification_title">TWR Notification</string>
    <string name="timer_notification_infos">Don\'t forget to take some photos !</string>
    <string name="timer_stopped">Timer has been stopped.</string>
    <string name="timer_launched">Timer has been launched. Activation will be triggered each [X] minute(s).</string>
    <string name="notimer_tostop">There\'s no timer to stop !</string>
    <string name="timer">Timer\'s management</string>
    <string name="timer_management">Timer allows you to schedule a regular notification. This is useful to not forget to take some photos.</string>
    <string name="timer_settings">Configure the schedule time</string>
    <string name="timer_launch">Start timer</string>
    <string name="timer_stop">Stop timer</string>
    <string name="timer_isOn">Timer is running</string>
    <string name="timer_isOff">Timer is not running</string>
    <string name="image_share">Share this image</string>
    <string name="image_delete">Delete this image</string>
    <string name="image_share_subject">A cool image !</string>
    <string name="image_share_text">Hey ! Look at this cool image from TacticalWarReport !</string>
    <string name="image_zoom_help">Touch the image to get out of this dialog</string>
    <string name="dice_simulation">Dices simulation</string>
    <string name="dices_configuration">Choose how many dices you want to roll. You also have to choice the success condition.</string>
    <string name="dices_howMany">How many dices ?</string>
    <string name="dices_successCondition">Your success condition</string>
    <string name="dices_roll">Roll the dices !</string>
    <string name="dices_toObtain">dices, to obtain</string>
    <string name="more_or_equal">+</string>
    <string name="equal">=</string>
    <string name="less_or_equal">-</string>
    <string name="dices_howMany_success">Succeeded :</string>
    <string name="dices_howMany_fail">Failed :</string>
    <string name="dices_rollSucessDices">Re-roll succeeded dices with new condition</string>
    <string name="preferences_display">Display preferences</string>
    <string name="preferences_extendedComments">Comments</string>
    <string name="preferences_extendedComments_summary">Display one comments field for each player\'s game phase</string>
    <string name="update_configuration_done">Your battle has been updated.</string>
    <string name="configure_battle">Configure battle</string>
    <string name="dices_relaunchSame">Relaunch</string>
    <string name="dices_newRoll">New roll</string>
    <string name="photo_replaceMenu">Replace</string>
    <string name="photo_newCaptureMenu">Add new</string>
    <string name="photo_deleteMenu">Delete</string>
    <string name="photo_army">Army\'s photo</string>
    <string name="armyList_hints">Army list, remarks, other &#8230;</string>
    <string name="dices_inTheory">In theory :</string>
    <string name="dices_win">OK dices</string>
    <string name="army_list">Army list of</string>
    <string name="powers">Psy/magical powers :</string>
    <string name="powers_hint">All random powers for your sorcerers</string>
    <string name="photo_charge">After charge photo</string>
    <string name="photo_power">After magic/psy photo</string>
</resources>