<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_timer"
        android:icon="@android:drawable/ic_menu_manage"
        android:showAsAction="never"
        android:title="@string/timer"/>
    <item
        android:id="@+id/diceSimulator"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="ifRoom|withText"
        android:title="@string/dice_simulation"/>
    <item
        android:id="@+id/menu_exportBattle"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="never"
        android:title="@string/export_battle_pdf"/>
    <item
        android:id="@+id/menu_exportWebBattle"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="never"
        android:title="@string/export_battle_web"
        android:visible="false"/>
    <item
        android:id="@+id/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/preferences"/>
    <item
        android:id="@+id/menu_photo"
        android:icon="@android:drawable/ic_menu_camera"
        android:showAsAction="always|withText"
        android:title="@string/photo"/>
    <item
        android:id="@+id/menu_done"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always|withText"
        android:title="@string/save"/>

</menu>