<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_newBattle"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="always|withText"
        android:title="@string/new_battle"/>
    <item
        android:id="@+id/auth"
        android:icon="@android:drawable/ic_secure"
        android:showAsAction="never"
        android:title="@string/connect"
        android:visible="false"/>
    <item
        android:id="@+id/diceSimulator"
        android:icon="@android:drawable/ic_menu_rotate"
        android:showAsAction="ifRoom|withText"
        android:title="@string/dice_simulation"/>
    <item
        android:id="@+id/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/preferences"/>
    <item
        android:id="@+id/about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>