<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_exportBattle"
        android:icon="@drawable/export_bclk"
        android:showAsAction="never"
        android:title="@string/export_battle_pdf"/>
    
    <item
        android:id="@+id/menu_exportWebBattle"
        android:icon="@drawable/export_bclk"
        android:showAsAction="never"
        android:title="@string/export_battle_web" android:visible="true"/>
    
    <item
        android:id="@+id/menu_configureBattle"
        android:icon="@drawable/edit_bclk"
        android:showAsAction="never"
        android:title="@string/configure_battle"/>
    
    <item
        android:id="@+id/menu_deleteBattle"
        android:icon="@drawable/delete_bclk"
        android:showAsAction="never"
        android:title="@string/delete_battle"/>

</menu>