<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <Switch
                android:id="@+id/nightFight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/is_night"
                android:textOff="@string/no"
                android:textOn="@string/yes" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <include
                    android:id="@+id/playerOneTurn"
                    layout="@layout/one_player_turn" />

                <include
                    android:id="@+id/playerTwoTurn"
                    layout="@layout/one_player_turn" />
            </FrameLayout>
        </LinearLayout>
    </TabHost>

    <Switch
        android:id="@+id/lastOne"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/is_last_turn"
        android:textOff="@string/no"
        android:textOn="@string/yes" />

</LinearLayout>