<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/headerText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dices_configuration" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <net.simonvt.widget.NumberPicker
            android:id="@+id/howManyPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:text="@string/dices_toObtain" />

        <net.simonvt.widget.NumberPicker
            android:id="@+id/successTypePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <net.simonvt.widget.NumberPicker
            android:id="@+id/successPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/rollDices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dices_roll" />

</LinearLayout>