<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        style="@style/headerText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/image_zoom_help" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/zoom_extra"
        android:scaleType="fitCenter"
        android:src="@drawable/damier" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/image_share" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left" />

        <ImageButton
            android:id="@+id/action_share"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image_share"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_share" />
    </LinearLayout>

</LinearLayout>