<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        style="@style/headerText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer_management" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/timer_settings" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left" />

        <ImageButton
            android:id="@+id/action_timer_settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/timer_settings"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_preferences" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/timer_launch" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left" />

        <ImageButton
            android:id="@+id/action_timer_launch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/timer_launch"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_lock_idle_alarm" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:text="@string/timer_stop" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left" />

        <ImageButton
            android:id="@+id/action_timer_stop"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/timer_stop"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

</LinearLayout>